log
Fri 12 Aug 2022 01:07:25 PM UTC: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
bf268ec
Fri 12 Aug 2022 01:11:07 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:20: error: expected expression before ‘)’ token
   40 |   *suma = sumaN(a, );
      |                    ^
Compilation failed
bdb8bc5
Fri 12 Aug 2022 01:11:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
3104215
Fri 12 Aug 2022 01:15:37 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:58:11: error: ‘p’ undeclared (first use in this function)
   58 |    strcpy(p[0].nombre, nombre);
      |           ^
exercises.c:58:11: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function ‘crearVector’:
exercises.c:80:11: error: returning ‘int *’ from a function with incompatible return type ‘Vector *’ [-Werror=incompatible-pointer-types]
   80 |    return v;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
9178e0a
Fri 12 Aug 2022 01:15:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:58:11: error: ‘p’ undeclared (first use in this function)
   58 |    strcpy(p[0].nombre, nombre);
      |           ^
exercises.c:58:11: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function ‘crearVector’:
exercises.c:79:12: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   79 |    int v = calloc(n, sizeof(int));
      |            ^~~~~~
exercises.c:80:11: error: returning ‘int’ from a function with return type ‘Vector *’ makes pointer from integer without a cast [-Werror=int-conversion]
   80 |    return v;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
4f14f7a
